Bugfix: Misspelling caused disalignment on index.html

--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ body {
   padding-top: 20px;
 }
 
-#save-menu {
+#save-menu, #simulation-menu {
   width: 100vw;
 }
 
